# deepvecfont-v2

./: README.md  dataloader.py  options.py  pyproject.toml  test_few_shot.py  train.py
data_utils/: augment.py  common_utils.py  convert_ttf_to_sfd.py  relax_rep.py  svg_utils.py  svg_utils_backup.py  write_data_to_dirs.py  write_glyph_imgs.py
deepvecfont/: dataloader.py  options.py  test_few_shot.py  train.py
deepvecfont/data_utils/: augment.py  extract_path.py  make_dataset.py  relax_rep.py  svg_utils.py  svg_utils_backup.py  write_data_to_dirs.py
deepvecfont/models/: image_encoder.py  modality_fusion.py  model_main.py  transformers.py  util_funcs.py  vgg_perceptual_loss.py
models/: image_decoder.py  image_encoder.py  modality_fusion.py  model_main.py  pos_enc.py  transformers.py  util_funcs.py  vgg_perceptual_loss.py
